# Vulkan_XPBD_TetraSim_Collision

./: .gitignore  CMakeLists.txt  README.md
models/: bunny_1k.1.edge  bunny_1k.1.ele  bunny_1k.1.face  bunny_1k.1.node
shaders/: FragmentShader.frag  HashClear.comp  HashInsert.comp  Pick.comp  Predict.comp  SolveCollision.comp  SolveDist.comp  SolveMouse.comp  SolveVol.comp  Update.comp  VertexShader.vert
src/: Vulkan_XPBD_TetraSim_Collision.cpp  Vulkan_XPBD_TetraSim_Interactive.cpp
